--- a/dev-dotnet/msbuild-tasks-api/files/15.4.8.0/mono-Microsoft.Build.Utilities.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/15.4.8.0/mono-Microsoft.Build.Utilities.csproj
@@ -5,6 +5,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <AssemblyName>Microsoft.Build.Utilities</AssemblyName>
+    <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
+      <VersionNumber>15.4.0.0</VersionNumber>
+    </PropertyGroup>
     <RootNamespace>Microsoft.Build.Utilities</RootNamespace>
     <ProjectGuid>{6583A0E6-E22F-4308-9D5C-F5E6D7D529B9}</ProjectGuid>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -230,16 +233,13 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
     <Reference Include="System.Configuration" />	
-    <Reference Include="Microsoft.Build.Framework, Version=15.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" >
+    <Reference Include="Microsoft.Build.Framework, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" >
       <HintPath>../Framework/bin/$(Configuration)/Microsoft.Build.Framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
-    <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
-      <VersionNumber>15.4.0.0</VersionNumber>
-    </PropertyGroup>
     <AssemblyInfo CodeLanguage="C#"
       OutputFile="AV.cs" 
       AssemblyVersion="$(VersionNumber)" 
