--- a/dev-dotnet/msbuild-defaulttasks/files/15.4/xbuild-Microsoft.Build.Tasks.csproj
+++ b/dev-dotnet/msbuild-defaulttasks/files/15.4/xbuild-Microsoft.Build.Tasks.csproj
@@ -5,6 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <AssemblyName>Microsoft.Build.Tasks.Core</AssemblyName>
+    <VersionNumber Condition=" '$(VersionNumber)' == '' ">15.4.0.0</VersionNumber>
     <RootNamespace>Microsoft.Build.Tasks</RootNamespace>
     <ProjectGuid>{59A73FE0-D3B7-4299-9063-3A587D429AF4}</ProjectGuid>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -762,8 +763,8 @@
     <Reference Include="System.Reflection" />
     <Reference Include="System.Reflection.Metadata" />
     <Reference Include="System.Collections.Immutable" />
-    <Reference Include="Microsoft.Build.Framework, Version=15.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.Build.Utilities, Version=15.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="Microsoft.Build.Framework, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
+    <Reference Include="Microsoft.Build.Utilities, Version=$(VersionNumber), Culture=neutral, PublicKeyToken=$(PublicKeyToken)" />
     <Reference Include="Microsoft.Build.Tasks.CodeAnalysis">
       <HintPath>$(CompilerToolsDir)\Microsoft.Build.Tasks.CodeAnalysis.dll</HintPath>
     </Reference>
@@ -777,9 +778,6 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
   <Target Name="BeforeBuild">
-    <PropertyGroup Condition=" '$(VersionNumber)' == '' ">
-      <VersionNumber>15.4.0.0</VersionNumber>
-    </PropertyGroup>
     <AssemblyInfo CodeLanguage="C#"
       OutputFile="AV.cs" 
       AssemblyVersion="$(VersionNumber)" 
