fixing placement errors, part 1

--- a/dev-dotnet/msbuild-tasks-api/files/15.4.8.0/mono-Microsoft.Build.Framework.csproj
+++ b/dev-dotnet/msbuild-tasks-api/files/15.4.8.0/mono-Microsoft.Build.Framework.csproj
@@ -130,9 +130,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Shared\Constants.cs">
-      <Link>Constants.cs</Link>
-    </Compile>
+    <Compile Include="..\Shared\Constants.cs" />
     <Compile Include="BuildEngineResult.cs" />
     <Compile Include="BuildErrorEventArgs.cs" />
     <Compile Include="BuildEventArgs.cs" />
